--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,15 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/openenglishttutor"
 REDIS_URL="redis://localhost:6379"
 
 # Authentication
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production-min-32-chars"
 JWT_EXPIRES_IN="7d"
 
-# AI Services
+# AI Services (Optional - for AI-powered evaluations)
 OPENAI_API_KEY="your-openai-api-key"
 GOOGLE_CLOUD_PROJECT_ID="your-google-cloud-project-id"
 GOOGLE_CLOUD_KEY_FILE="./service-account.json"
 
-# File Storage (AWS S3 or Google Cloud Storage)
+# File Storage (Optional - for audio/image uploads)
 AWS_ACCESS_KEY_ID="your-aws-access-key"
 AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
 AWS_S3_BUCKET="openenglishttutor-files"
@@ -23,13 +23,13 @@ API_PORT=3001
 WEB_PORT=3000
 CORS_ORIGIN="http://localhost:3000"
 
-# Email Configuration (for user notifications)
+# Email Configuration (Optional - for user notifications)
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="your-email@gmail.com"
 SMTP_PASS="your-app-password"
 
-# Monitoring & Analytics
+# Monitoring & Analytics (Optional)
 SENTRY_DSN="your-sentry-dsn"
 MIXPANEL_TOKEN="your-mixpanel-token"
 
@@ -41,3 +41,12 @@ RATE_LIMIT_MAX_REQUESTS=100
 MAX_WRITING_LENGTH=1000
 MAX_SPEAKING_DURATION=300
 AI_TIMEOUT_MS=30000
+
+# Development Settings
+LOG_LEVEL="debug"
+ENABLE_CORS=true
+ENABLE_RATE_LIMITING=true
+
+# Database Connection Pool (Optional tuning)
+DATABASE_CONNECTION_LIMIT=10
+DATABASE_POOL_TIMEOUT=20000
