--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,50 +17,53 @@
     "db:seed": "tsx src/scripts/seed.ts"
   },
   "dependencies": {
-    "@openenglishttutor/shared": "workspace:*",
-    "express": "^4.18.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.0",
-    "prisma": "^5.0.0",
+    "@google-cloud/speech": "^6.7.1",
+    "@google-cloud/text-to-speech": "^5.0.0",
+    "@openenglishttutor/shared": "file:../shared",
     "@prisma/client": "^5.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
-    "openai": "^4.0.0",
-    "@google-cloud/speech": "^6.0.0",
-    "@google-cloud/text-to-speech": "^5.0.0",
-    "multer": "^1.4.5",
-    "redis": "^4.6.0",
-    "zod": "^3.22.0",
-    "winston": "^3.10.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.0",
+    "express": "^4.18.0",
     "express-rate-limit": "^6.10.0",
     "express-validator": "^7.0.0",
-    "cookie-parser": "^1.4.6",
-    "compression": "^1.7.4"
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "openai": "^4.0.0",
+    "prisma": "^5.0.0",
+    "redis": "^4.6.0",
+    "winston": "^3.10.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
-    "@types/cors": "^2.8.0",
-    "@types/morgan": "^1.9.0",
     "@types/bcryptjs": "^2.4.0",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/multer": "^1.4.0",
-    "@types/cookie-parser": "^1.4.0",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.0",
+    "@types/cors": "^2.8.0",
+    "@types/express": "^4.17.0",
+    "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/morgan": "^1.9.0",
+    "@types/multer": "^1.4.0",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "tsx": "^3.12.0",
-    "eslint": "^8.0.0",
+    "@types/supertest": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
     "supertest": "^6.3.0",
-    "@types/supertest": "^2.0.0"
+    "ts-jest": "^29.0.0",
+    "tsx": "^3.12.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "prisma": {
+    "seed": "tsx src/scripts/seed.ts"
   }
 }
