--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -17,7 +17,10 @@
     "noEmitOnError": true,
     "incremental": true,
     "tsBuildInfoFile": "./dist/.tsbuildinfo",
-    "types": ["node"]
+    "types": ["node"],
+   "baseUrl": ".", // set base URL for shared package
+   "composite": true,
+   "declarationDir": "./dist/types"
   },
   "include": [
     "src/**/*"
